--- a/app/index_local.html
+++ b/app/index_local.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>LLDAP Administration</title>
+    <title>Wild Blue Login</title>
     <script src="/static/main.js" type="module" defer></script>
     <link
       href="/static/bootstrap-nightshade.min.css"
